# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blender.py
include/: camera.hpp  distribution.hpp  geometry.hpp  image.hpp  intersection.hpp  light.hpp  material.hpp  path_tracer_shader.hpp  scene.hpp  shader.hpp  vector2.hpp  vector3.hpp
include/distributions/: beckmann.hpp
models/: cone.json  cone.mtl  cornell.json  cornell_box.mtl  cornell_box_VI.mtl  housenight.blend  housenight.blend1  housenight.json  light.json  light.mtl  lights.blend  monkey.blend  monkey.blend1  monkey.json  monkey.mtl
src/: bsdf.cpp  camera.cpp  geometry.cpp  image.cpp  light.cpp  main.cpp  material.cpp  path_tracer_shader.cpp  scene.cpp  shader.cpp  vector2.cpp  vector3.cpp
src/distributions/: beckmann.cpp  ggx.cpp
